@@ -4,6 +4,8 @@
 
 - fixed: schema validation (problem with Arrays)
 
+- improved: GZIP compression
+
 ======= 2.9.1 (HOTFIX)
 
 - added: `controller.throw409()`, `req.throw409()`
